# job_search

./: README.md  justfile  main.py  pyproject.toml  test_structure.py
src/job_search/: cli.py  main.py  models.py
src/job_search/crews/job_search_crew/: job_search_crew.py
src/job_search/crews/job_search_crew/config/: agents.yaml  tasks.yaml
src/job_search/crews/poem_crew/: poem_crew.py
src/job_search/flows/: jod_search.py
src/job_search/tools/: jobspy_tool.py  resume_generator_tool.py
